[package]
name = "vihr"
version = "0.1.0"
edition = "2021"
description = "A Simple CLI time tracking application."
authors = ["Windore <windore.wi@protonmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/Windore/vihr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
